# ds-unidad-2-actividad-2-listasenlazadas-Israel2430046

./: CMakeLists.txt  CMakeLists.txt   Listacargada.h  README.md  Rotomapeo.h  Trama.h  Tramabase.h  Treapeomap.h  decodificador  emisaro.ino  main.cpp
